<resources>
    <string name="app_name">AiYTSite</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image_desc">image_desc</string>
    <string name="login_username_edit_hint">请输入您的账号</string>
    <string name="login_password_edit_hint">请输入您的密码</string>
    <string name="login_register_text">注册新用户</string>
    <string name="login">登 录</string>
    <string name="login_forget_password_text">忘记密码</string>
    <string name="login_alert_dialog_ok">确定</string>
    <string name="remember_password">记住密码</string>
    <string name="navigate_bar_home">首页</string>
    <string name="title_activity_home">爱原态</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="splash_version_info">快乐农户客户端\n\nVersion 1.0.0</string>
    <string name="index_search_edit_hint">搜索您想要的产品</string>
    <string name="index_notify_info">膳食，我们为您量身定制</string>
    <string name="index_poultrys">家禽肉类</string>
    <string name="index_vegetables">时令蔬菜</string>
    <string name="index_eggs">蛋类</string>
    <string name="index_fruilts">应季水果</string>
    <string name="index_grocery">粮油副食</string>
    <string name="index_tea">酒水茶叶</string>
    <string name="index_shopping_rementuijian">热门推荐</string>
    <string name="index_shopping_chunjiesongli">春节送礼</string>
    <string name="contact_tel">客户热线:028-87657888</string>
    <string name="contact_email">官方邮箱:www.yiqiao@sina.com</string>
    <string name="contact_website">官方网址:http://www.cdyqkj.cn</string>
    <string name="menu_setting">设置</string>
    <string name="menu_history">浏览历史</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_help">帮助</string>
    <string name="menu_about">关于</string>
    <string name="menu_exit">退出</string>
    <string name="shoppingCar">购物车</string>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string name="img_name">img</string>
    <string name="top_hint">将条形码或二维码置于取景框内系统会自动扫描</string>
    <string name="bottom_hint">建议与镜头保持10CM距离，尽量避免逆光和阴影</string>
    <string name="cancel">取消</string>
    <string name="OK">确定</string>
    <string name="create">生成</string>
    <string name="scan_failed">扫描失败</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备</string>
    <string name="front_Light_disabled">您的手机不支持闪光灯功能，建议在光线充足的环境下使用</string>
    <string name="seekbar_add">+</string>
    <string name="seekbar_del">-</string>
    <string name="tips">请输入你要生成的内容：</string>
    <string name="input_content">输入你需要转换的内容</string>
    <string name="bar_code">一维码</string>
    <string name="qr_code">二维码</string>
    <string name="image_content_description">生成的图片</string>
    <string name="image_too_big">商品图片太大啦手机受不了</string>
    <string name="not_find">照片中未识别到一维码或者二维码</string>
    <string name="hello">lafaso test Activity!</string>
    <string name="app_version_name">1.0.00</string>
    <string name="app_version_code">1000</string>
    <string name="apk_name">lafaso.apk</string>
    <string name="log_tag">lafaso</string>
    <string name="log_info">1</string>
    <string name="log_debug">1</string>
    <string name="log_warning">1</string>
    <string name="log_error">1</string>
    <string name="picture_cache_path">lafaso/picture</string>
    <string name="picture_cache_day">3</string>
    <string name="cache_db_name">cache.db</string>
    <string name="cache_db_version">1000</string>
    <string name="cache_db_minutes">30</string>
    <string name="net_debug">1</string>
    <string name="net_debug_filename">lafaso/netreocrd.txt</string>
    <string name="preference_config_name">lafasoconfig</string>
    <string name="img_desc">img_desc</string>
    <string name="refresh_down">下拉刷新</string>
    <string name="refresh_last">上次更新</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="cancle2">取 消</string>
    <string name="hint_info">提示信息</string>
    <string name="download">下 载</string>
    <string name="more_record">获取更多</string>
    <string name="exit">确认退出</string>
    <string name="update">更新</string>
    <string name="update_download">下载程序</string>
    <string name="update_checking">正在检查版本......</string>
    <string name="update_version_new">当前已是最新版本！</string>
    <string name="update_version_old">检测到新版本，是否下载?</string>
    <string name="update_content">更新内容\n</string>
    <string name="update_filesize">文件大小：</string>
    <string name="update_sdcard_size">SD卡剩余容量：</string>
    <string name="share_info">软件分享</string>
    <string name="share_hint">请输入分享内容</string>
    <string name="share_title">分享好友</string>
    <string name="share_sure">确认分享</string>
    <string name="share_cancle">取消分享</string>
    <string name="error_net">网络连接不可用，请稍候重试</string>
    <string name="error_download_sdcard">升级下载失败: 检测不到SD卡！</string>
    <string name="error_download_net">升级下载失败: 请检查网络！</string>
    <string name="msp_str_null" />
    <string name="msp_app_name">支付宝快捷支付服务</string>
    <string name="msp_error_title_default">提示</string>
    <string name="msp_action_settings">设置</string>
    <string name="msp_xlistview_header_hint_normal">下拉刷新</string>
    <string name="msp_xlistview_header_last_time">上次更新时间：</string>
    <string name="msp_xlistview_footer_hint_normal">查看更多</string>
    <string name="msp_close">关闭</string>
    <string name="msp_memo_user_cancel">操作已经取消。</string>
    <string name="msp_memo_app_cancel">程序或者数据出现问题。</string>
    <string name="msp_memo_server_cancel">系统繁忙，请稍后再试。</string>
    <string name="msp_memo_repeat_pay">同一订单禁止同时多次支付。</string>
    <string name="msp_mini_safty_code_info">安全码是打印在信用卡背面签名区的一组数字，一般是后3位或后4位数字</string>
    <string name="msp_mini_safty_code_title">安全码说明</string>
    <string name="msp_mini_read_protocal_title">选择阅读协议</string>
    <string name="msp_mini_choose_identitify">选择证件类别</string>
    <string name="msp_mini_card_type_text">卡类型</string>
    <string name="confirm_title">提示</string>
    <string name="cardUnbing">解除绑定</string>
    <string name="cardDefaultuse">默认使用该卡支付</string>
    <string name="cardCancle">取消</string>
    <string name="channel">CommonChannelInfo</string>
    <string name="mini_loading_1">正在安全检测…</string>
    <string name="mini_loading">正在加载…</string>
    <string name="mini_net_error">不能连接到网络，是否重试？</string>
    <string name="mini_redo">重试</string>
    <string name="mini_error_title_default">提示</string>
    <string name="mini_app_error">系统繁忙，请稍后再试。</string>
    <string name="mini_debug_app_error">程序发生错误！点击确定退出程序。</string>
    <string name="mini_countdown_info">获取校验码</string>
    <string name="mini_format_error">格式错误</string>
    <string name="mini_page_add_title">添加银行卡</string>
    <string name="mini_page_add_hint">银行卡号</string>
    <string name="mini_card_no">卡号</string>
    <string name="mini_page_add_tips">支付宝提供支付密码和短信验证的双重保障</string>
    <string name="mini_page_msg_title">填写银行卡信息</string>
    <string name="mini_page_next">下一步</string>
    <string name="mini_page_name">姓名</string>
    <string name="mini_page_input_name_hint">持卡人姓名</string>
    <string name="mini_id_no">证件号</string>
    <string name="mini_page_input_id_hint">证件号码</string>
    <string name="mini_page_msg_check">信息加密处理，仅用于银行验证</string>
    <string name="mini_page_msg_choose_type">选择证件类型</string>
    <string name="mini_date">有效期</string>
    <string name="mini_date_hint">月份/年份</string>
    <string name="mini_safe_no">安全码</string>
    <string name="mini_safe_no_hint">卡背面末三位数字</string>
    <string name="mini_phone_no">手机号</string>
    <string name="mini_phone_no_hint">银行预留手机号码</string>
    <string name="mini_agree">同意</string>
    <string name="mini_quickpay_protocol">《服务协议》</string>
    <string name="mini_password">密码</string>
    <string name="mini_switch">切换</string>
    <string name="mini_car_default_use">默认使用该卡支付</string>
    <string name="mini_car_limit_phone">调整交易限额，请联系银行客服：</string>
    <string name="mini_password_hint">请输入密码</string>
    <string name="mini_canel_install_msp">你已取消安装移动快捷支付。</string>
    <string name="mini_canel_install_wallet">你已取消安装支付宝钱包。</string>
    <string name="mini_setting_default_tips">默认使用该卡支付</string>
    <string name="mini_setting_view_all_bankcard">查看全部(%1$d张)</string>
    <string name="mini_setting_debit_cards_tips">储蓄卡</string>
    <string name="mini_setting_credit_cards_tips">信用卡</string>
    <string name="mini_setting_pay_password">支付密码</string>
    <string name="mini_weakpassword_error_same">请不要使用相同的数字</string>
    <string name="mini_weakpassword_error_serial">请不要使用连续的数字</string>
    <string name="mini_str_null" />
    <string name="submit">提交</string>
    <string name="complete">完成</string>
    <string name="back">返回</string>
    <string name="edit">编辑</string>
    <string name="after_sale">申请售后</string>
    <string name="logistics">查看物流</string>
    <string name="goto_comment">去评价</string>
    <string name="save">保存</string>
    <string name="clear">清空</string>
    <string name="add">新增</string>
    <string name="delete">删除</string>
    <string name="login_colse">×</string>
    <string name="close">关闭</string>
    <string name="poweredByWinXin">Powered by 微信智能</string>
    <string name="voice_searching">亲，正在为您搜索...</string>
    <string name="forget_pw_prompt">请正确填写您注册的电子邮箱地址，系统将把新的密码发送到您邮箱，如果该邮箱地址错误，或者您已经忘记注册的邮箱地址，我们将无法为您找回密码，建议您重新注册一个账号。</string>
    <string name="error_request">数据获取失败</string>
    <string name="my_editpw_original">原密码</string>
    <string name="my_editpw_new">新密码</string>
    <string name="set_pwd">设置密码</string>
    <string name="navigate_bar_sort">分类</string>
    <string name="navigate_bar_search">搜索</string>
    <string name="navigate_bar_shopping_car">购物车</string>
    <string name="navigate_bar_myxiaomai">个人信息</string>
    <string name="title_home">首页</string>
    <string name="title_sort">分类</string>
    <string name="title_search">搜索</string>
    <string name="title_shopcar">购物车</string>
    <string name="title_login">登录</string>
    <string name="title_public_notices">公告列表</string>
    <string name="login_register_text_hint">还不是中粮我买网用户？</string>
    <string name="login_use_qq">用合作网站账号登录</string>
    <string name="register_submit">提交注册</string>
    <string name="register_email_string">Email</string>
    <string name="register_email_hint">输入您的注册邮箱</string>
    <string name="register_name_string">用户名</string>
    <string name="register_name_hint">用户名不能以数字开头</string>
    <string name="register_password_string">登录密码</string>
    <string name="register_password_hint">密码长度必须为8—16个字符</string>
    <string name="register_pw_ack_string">确认密码</string>
    <string name="register_pw_ack_hint">请再次输入登录密码</string>
    <string name="shopping_car_7days">不适用7天无理由退货</string>
    <string name="shopping_car_checkout">去结算</string>
    <string name="shopping_car_checkout_privilege">优惠：</string>
    <string name="shopping_car_checkout_pay">总金额(不含运费)：</string>
    <string name="shopping_car_stockout">非常抱歉，部分商品售罄或下架，暂时无法购买</string>
    <string name="shopping_car_nul_look">随便逛逛</string>
    <string name="shopping_car_nul_favorite">我的收藏</string>
    <string name="shopping_car_nul_desc">您的购物车为空，马上挑选商品吧~</string>
    <string name="product_womai_price">我买价：</string>
    <string name="product_count">数量：</string>
    <string name="product_weight">重量：</string>
    <string name="product_integral">积分：</string>
    <string name="product_number_add">+</string>
</resources>