<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
    
    <!-- 自定义标题栏 -->
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_alignParentTop="true"
            android:background="@color/white">

            <ImageView
                android:layout_width="220.0dip"
                android:layout_height="33.0dip"
                android:layout_gravity="center_vertical"
                android:background="@drawable/logo_test_color"
                android:contentDescription="@string/image_desc"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="修改密码"
                android:textColor="@color/child_page_titletextcolor"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/spliter" />
    <!-- 自定义标题栏 -->    
    </LinearLayout>
    
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="20.0dip"
    android:paddingRight="20.0dip"
    android:paddingTop="25.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_bg_normal"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:orientation="horizontal"
            android:paddingLeft="13.0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/my_editpw_original"
                android:textColor="@color/black3_text_color"
                android:textSize="14.0sp" />

            <EditText
                android:id="@+id/person_info_modify_password_edit_pw_old"
                style="\@style/login_edit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="70.0dip"
                android:background="@color/transparent"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black3_text_color" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/spliter" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:orientation="horizontal"
            android:paddingLeft="13.0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/my_editpw_new"
                android:textColor="@color/black3_text_color"
                android:textSize="14.0sp" />

            <EditText
                android:id="@+id/person_info_modify_password_edit_pw_new"
                style="@style/login_edit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="70.0dip"
                android:background="@color/transparent"
                android:hint="@string/register_password_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black3_text_color" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/spliter" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:orientation="horizontal"
            android:paddingLeft="13.0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/register_pw_ack_string"
                android:textColor="@color/black3_text_color"
                android:textSize="14.0sp" />

            <EditText
                android:id="@+id/person_info_modify_password_edit_pw_ack"
                style="@style/login_edit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="70.0dip"
                android:background="@color/transparent"
                android:hint="@string/register_pw_ack_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black3_text_color" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/person_info_modify_password_submit_btn"
        android:layout_width="fill_parent"
        android:layout_height="36.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/btn_green"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="15.0sp" />
    
    <Button
        android:id="@+id/person_info_modify_password_back_btn"
        android:layout_width="fill_parent"
        android:layout_height="36.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/btn_white"
        android:text="返回"
        android:textColor="@color/black"
        android:textSize="15.0sp" />

</LinearLayout>

</LinearLayout>