<?xml version="1.0" encoding="UTF-8"?>
<ScrollView 
    android:scrollbars="none" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:background="@color/index_bg"
  	xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout 
        android:orientation="vertical" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <RelativeLayout 
            android:background="@color/white" 
            android:id="@+id/login_image_layout" 
            android:layout_width="fill_parent" 
            android:layout_height="50.0dip">
            <ImageView 
                android:layout_alignParentLeft="true" 
                android:background="@drawable/logo_test_color" 
                android:layout_width="220.0dip" 
                android:layout_height="33.0dip" 
                android:scaleType="fitXY"  
                android:layout_centerHorizontal="true" 
                android:layout_centerVertical="true" 
                android:contentDescription="@string/image_desc" />
        </RelativeLayout>
        <RelativeLayout 
            android:orientation="vertical" 
            android:paddingLeft="20.0dip" 
            android:paddingTop="25.0dip" 
            android:paddingRight="20.0dip" 
            android:paddingBottom="25.0dip" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:layout_marginTop="10.0dip">
            <LinearLayout 
                android:orientation="vertical" 
                android:id="@+id/login_input_layout" 
                android:background="@drawable/list_bg_normal" 
                android:layout_width="fill_parent" 
                android:layout_height="91.0dip" 
                android:layout_alignParentTop="true" 
                android:layout_centerHorizontal="true">
                <RelativeLayout 
                    android:paddingLeft="13.0dip" 
                    android:paddingRight="13.0dip" 
                    android:layout_width="fill_parent" 
                    android:layout_height="45.0dip">
                    <ImageView 
                        android:id="@+id/login_image_username" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:src="@drawable/login_user" 
                        android:layout_alignParentLeft="true" 
                        android:layout_centerVertical="true" 
                        android:contentDescription="@string/image_desc" />
                    <EditText 
                        android:id="@+id/login_edit_username" 
                        android:background="@color/transparent" 
                        android:layout_width="fill_parent" 
                        android:layout_height="fill_parent" 
                        android:layout_marginLeft="13.0dip" 
                        android:hint="@string/login_username_edit_hint" 
                        android:maxLines="1" 
                        android:singleLine="true" 
                        android:layout_toRightOf="@+id/login_image_username" 
                        android:layout_centerVertical="true" 
                        android:imeOptions="actionNext" 
                        style="@style/login_edit" />
                </RelativeLayout>
                <View 
                    android:background="@color/spliter" 
                    android:layout_width="fill_parent" 
                    android:layout_height="0.5dip" />
                <RelativeLayout 
                    android:paddingLeft="13.0dip" 
                    android:paddingRight="13.0dip" 
                    android:layout_width="fill_parent" 
                    android:layout_height="45.0dip">
                    <ImageView 
                        android:id="@+id/login_image_password" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:src="@drawable/login_pwd" 
                        android:layout_alignParentLeft="true" 
                        android:layout_centerVertical="true" 
                        android:contentDescription="@string/image_desc" />
                    <EditText 
                        android:id="@+id/login_edit_password" 
                        android:background="@color/transparent" 
                        android:layout_width="fill_parent" 
                        android:layout_height="fill_parent" 
                        android:layout_marginLeft="13.0dip" 
                        android:hint="@string/login_password_edit_hint" 
                        android:singleLine="false" 
                        android:layout_toRightOf="@+id/login_image_password" 
                        android:layout_centerVertical="true" 
                        android:inputType="textPassword" 
                        style="@style/login_edit" />
                </RelativeLayout>
            </LinearLayout>
            <RelativeLayout 
                android:id="@+id/login_btn_layout" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip" 
                android:layout_below="@+id/login_input_layout">
                <Button 
                    android:textSize="15.0sp" 
                    android:textColor="@color/black6_text_color" 
                    android:id="@+id/login_register_btn" 
                    android:background="@drawable/btn_white" 
                    android:layout_width="111.0dip" 
                    android:layout_height="36.0dip" 
                    android:text="@string/login_register_text" 
                    android:layout_alignParentLeft="true" />
                <Button 
                    android:textSize="15.0sp" 
                    android:textColor="@color/white" 
                    android:id="@+id/login_btn" 
                    android:background="@drawable/btn_green" 
                    android:layout_width="159.0dip" 
                    android:layout_height="36.0dip" 
                    android:text="@string/login" 
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:layout_marginTop="10.0dip" 
                android:layout_below="@+id/login_btn_layout">
                <CheckBox 
                    android:id="@+id/remember_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_password"
                    android:textSize="15.0sp" 
                    android:textColor="@color/black6_text_color"
                    android:layout_alignParentLeft="true"
                    />
                
                <TextView 
                    android:textSize="15.0sp" 
                    android:textColor="@color/black6_text_color" 
                    android:id="@+id/login_forget_password" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_alignParentRight="true" 
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:text="@string/login_forget_password_text"/>
            </RelativeLayout>
            
        </RelativeLayout>
    </LinearLayout>
</ScrollView>